--- a/EW/Balancing/MM_Bullets.cfg
+++ b/EW/Balancing/MM_Bullets.cfg
@@ -39,6 +39,13 @@
 	@apBulletMod = 0.42
     @tntMass = 0.031
 }
++BULLET[30x165HE]:NEEDS[SMA] {
+	@name = 30mm3UOF8
+	@bulletVelocity = 950
+	@bulletMass = 0.389
+	@apBulletMod = 0.42
+    @tntMass = 0.049
+}
 @BULLET[30x165K]:NEEDS[SMA] {
 	@bulletVelocity = 900
 	@bulletMass = 0.4
