--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -329,6 +329,39 @@
 		amount = 1904
 		maxAmount = 1904
 	}
+	
+	@MODULE[ModuleWeapon] {
+		%hasFireAnimation = true
+		%hasDeployAnim = false
+		%fireAnimName = 2K22TMT
+		%spinDownAnimation = false
+		%roundsPerMinute = 2250
+		%maxDeviation = 0.60
+		%maxEffectiveDistance = 2300
+		%maxTargetingRange = 5000	
+		
+		%bulletType = 30mm3UOF8
+		%ammoName = 30x165Ammo		
+		%requestResourceAmount = 1
+
+		%hasRecoil = true
+		%onlyFireInRange = true
+		%bulletDrop = true	
+		%weaponType = ballistic	
+		%projectileColor = 255, 90, 0, 160 //RGBA 0-255 
+		%tracerStartWidth = 0.15
+		%tracerEndWidth = 0.05
+		%tracerLength = 0	
+		
+		%maxHeat = 3600
+		%heatPerShot = 42
+		%heatLoss = 1200	
+		%fireSoundPath = BDArmory/Parts/m230ChainGun/Sounds/m230shot
+		%overheatSoundPath = BDArmory/Parts/50CalTurret/sounds/turretOverheat
+		%oneShotSound = true
+		%showReloadMeter = false
+		%reloadAudioPath = BDArmory/Parts/m1Abrams/sounds/reload
+	}
 }
 @PART[SMA57E6BGM]:NEEDS[SMA] {
 	@title = 9M335 Pantsir
