--- a/EW/Balancing/MM_Bullets.cfg
+++ b/EW/Balancing/MM_Bullets.cfg
@@ -39,7 +39,7 @@
 	@apBulletMod = 0.42
     @tntMass = 0.031
 }
-+BULLET[30x165HE]:NEEDS[SMA] {
++BULLET[30x165HE]:NEEDS[SMA]:FINAL {
 	@name = 30mm3UOF8
 	@bulletVelocity = 950
 	@bulletMass = 0.389
@@ -111,14 +111,14 @@
 	@tntMass = 1.13
     @explosive = True
 }
-@BULLET[OF58100mmBullet]:AFTER[SM_Industries]:NEEDS[SMA] {
+@BULLET[OF58100mmBullet]:AFTER[SMA]:NEEDS[SMA] {
 	@bulletVelocity = 900
 	@bulletMass = 15.6
 	@apBulletMod = 0.5
     @tntMass = 10.3
     @fuzeType = Flak
 }
-+BULLET[OF58100mmBullet]:NEEDS[SM_Industries]:FINAL {
++BULLET[OF58100mmBullet]:NEEDS[SMA]:FINAL {
 	@name = 100MMZS-58
     @fuzeType = Timed
 }
@@ -175,7 +175,7 @@
 	@bulletMass = 8
 	@apBulletMod = 1.156
 }
-@BULLET[155mmHE]:AFTER[SM_Industries]:NEEDS[SMA] {
+@BULLET[155mmHE]:AFTER[SMA]:NEEDS[SMA] {
 	@bulletMass = 60
 	@apBulletMod = 0.17
     @tntMass = 12
