--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -316,7 +316,7 @@
 		CASELevel = 0
 	}
 }
-@PART[SMTunguskaAAMT]:NEEDS[SMA] {
+@PART[SMTunguskaAAMT]:NEEDS[SMA]:AFTER[SMA] {
 	@title = 2K22 Tunguska
 	@description = KBP 2K22/2S6 "Tunguska" (SA-19) "Grison" is a Russian tracked self-propelled anti-aircraft weapon armed with a surface-to-air gun and missile system. It is designed to provide day and night protection for infantry and tank regiments against low-flying aircraft, helicopters, and cruise missiles in all weather conditions.
 	
@@ -330,37 +330,52 @@
 		maxAmount = 1904
 	}
 	
-	@MODULE[ModuleWeapon] {
-		%hasFireAnimation = true
-		%hasDeployAnim = false
-		%fireAnimName = 2K22TMT
-		%spinDownAnimation = false
-		%roundsPerMinute = 2250
-		%maxDeviation = 0.60
-		%maxEffectiveDistance = 2300
-		%maxTargetingRange = 5000	
-		
-		%bulletType = 30mm3UOF8
-		%ammoName = 30x165Ammo		
-		%requestResourceAmount = 1
+	-MODULE[ModuleWeapon] {}
+	+MODULE[ModuleWeapon] {
+		fireTransformName = fireTransform
+		turretID = 0
 
-		%hasRecoil = true
-		%onlyFireInRange = true
-		%bulletDrop = true	
-		%weaponType = ballistic	
-		%projectileColor = 255, 90, 0, 160 //RGBA 0-255 
-		%tracerStartWidth = 0.15
-		%tracerEndWidth = 0.05
-		%tracerLength = 0	
+		hasDeployAnim = false
+
+		hasFireAnimation = false
+		fireAnimName = fireAnimation_Leopard1A1
+		spinDownAnimation = false
+
+		roundsPerMinute = 2250
+		maxDeviation = 0.6
+		maxTargetingRange = 2300
+		maxEffectiveDistance = 5000
+
+		ammoName = CannonShells
+		bulletType = 30x165Ammo
+		requestResourceAmount = 1
+
+		hasRecoil = true
+		onlyFireInRange = true
+		bulletDrop = true
+
+		weaponType = ballistic
+
+		projectileColor = 255, 90, 0, 190
+
+		tracerStartWidth = 0.15
+		tracerEndWidth = 0.05
+		tracerLength = 0
+
+		maxHeat = 3600
+		heatPerShot = 18
+		heatLoss = 1200
+
+		fireSoundPath = BDArmory/Parts/m230ChainGun/Sounds/m230shot
+		overheatSoundPath = BDArmory/Parts/50CalTurret/sounds/turretOverheat
+		oneShotSound = true
+		showReloadMeter = false
+		reloadAudioPath = BDArmory/Parts/m1Abrams/sounds/reload
 		
-		%maxHeat = 3600
-		%heatPerShot = 42
-		%heatLoss = 1200	
-		%fireSoundPath = BDArmory/Parts/m230ChainGun/Sounds/m230shot
-		%overheatSoundPath = BDArmory/Parts/50CalTurret/sounds/turretOverheat
-		%oneShotSound = true
-		%showReloadMeter = false
-		%reloadAudioPath = BDArmory/Parts/m1Abrams/sounds/reload
+		engageAir = true
+		engageMissile = false
+		engageGround = false
+		engageSLW = false
 	}
 }
 @PART[SMA57E6BGM]:NEEDS[SMA] {
