--- a/Missiles/sam_9M32.cfg
+++ b/Missiles/sam_9M32.cfg
@@ -44,7 +44,7 @@
 
 	MODULE {
 		name = MissileLauncher
-		shortName = 9K32 Strela-2
+		shortName = 9M32 Strela-2
 		guidanceActive = true
 		
 		// --- Targeting ---
