--- a/Missiles/sam_S25.cfg
+++ b/Missiles/sam_S25.cfg
@@ -51,7 +51,7 @@ PART {
 
 	MODULE {
 		name = MissileLauncher
-		shortName = S-25
+		shortName = S-25 V-300
 		guidanceActive = true
 		
 		// --- Targeting ---
