--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -331,7 +331,9 @@
 	}
 	
 	-MODULE[ModuleWeapon] {}
-	+MODULE[ModuleWeapon] {
+	MODULE {
+		name = ModuleWeapon
+	
 		fireTransformName = fireTransform
 		turretID = 0
 
