--- a/EW/ShipHulls.cfg
+++ b/EW/ShipHulls.cfg
@@ -1,4 +1,4 @@
-+PART[mediumbow]:AFTER[SM_Industries] {
++PART[mediumbow]:AFTER[SMA] {
 	@name = mediumccbow
 	@title = Cruiser Bow
 	@description = Cruiser Bow
@@ -7,7 +7,7 @@
 		%maxHitPoints = 70000
 	}
 }
-+PART[mediumhelostern]:AFTER[SM_Industries] {
++PART[mediumhelostern]:AFTER[SMA] {
 	@name = mediumcchelostern
 	@title = Cruiser Helicopter Stern
 	@description = Cruiser Stern
@@ -16,7 +16,7 @@
 		%maxHitPoints = 70000
 	}
 }
-+PART[mediumhull]:AFTER[SM_Industries] {	
++PART[mediumhull]:AFTER[SMA] {	
 	@name = mediumcchull
 	@title = Cruiser Hull
 	@description = Cruiser Hull
@@ -25,7 +25,7 @@
 		%maxHitPoints = 77000
 	}
 }
-+PART[mediumhullshort]:AFTER[SM_Industries] {
++PART[mediumhullshort]:AFTER[SMA] {
 	@name = mediumcchullshort
 	@title = Cruiser Short Hull
 	@description = Cruiser Short Hull
@@ -34,7 +34,7 @@
 		%maxHitPoints = 70000
 	}
 }
-+PART[mediumstern]:AFTER[SM_Industries] {
++PART[mediumstern]:AFTER[SMA] {
 	@name = mediumccstern
 	@title = Cruiser Stern
 	@description = Cruiser Stern
@@ -43,7 +43,7 @@
 		%maxHitPoints = 70000
 	}
 }
-+PART[MedBowRevB]:AFTER[SM_Industries] {
++PART[MedBowRevB]:AFTER[SMA] {
 	@name = MedBowRevBcc
 	@title = Cruiser Bow v2
 	@description = Cruiser Bow v2
@@ -52,7 +52,7 @@
 		%maxHitPoints = 70000
 	}
 }
-+PART[MedHullLCSModule2]:AFTER[SM_Industries] {
++PART[MedHullLCSModule2]:AFTER[SMA] {
 	@name = MedHullLCSModule2cc
 	@title = Cruiser Hull LCS Module 2
 	@description = Cruiser Hull LCS Module 2
@@ -61,7 +61,7 @@
 		%maxHitPoints = 70000
 	}
 }
-+PART[mediumsternHangarShort]:AFTER[SM_Industries] {
++PART[mediumsternHangarShort]:AFTER[SMA] {
 	@name = mediumsternHangarShortcc
 	@title = Cruiser Stern Hangar
 	@description = Cruiser Stern Hangar
@@ -70,7 +70,7 @@
 		%maxHitPoints = 70000
 	}
 }
-+PART[mediumsternHangarLong]:AFTER[SM_Industries] {
++PART[mediumsternHangarLong]:AFTER[SMA] {
 	@name = mediumsternHangarLongcc
 	@title = Cruiser Stern Hangar Long
 	@description = Cruiser Stern Hangar
@@ -79,7 +79,7 @@
 		%maxHitPoints = 70000
 	}
 }
-+PART[MedLCSmodule1]:AFTER[SM_Industries] {
++PART[MedLCSmodule1]:AFTER[SMA] {
 	@name = MedLCSmodule1cc
 	@title = Cruiser LCS Module
 	@description = Cruiser LCS Module
@@ -88,7 +88,7 @@
 		%maxHitPoints = 70000
 	}
 }
-+PART[MedLCSmodule1B]:AFTER[SM_Industries] {
++PART[MedLCSmodule1B]:AFTER[SMA] {
 	@name = MedLCSmodule1Bcc
 	@title = Cruiser LCS Module B
 	@description = Cruiser LCS Module B
@@ -97,7 +97,7 @@
 		%maxHitPoints = 70000
 	}
 }
-+PART[MedLCSmodule2]:AFTER[SM_Industries] {
++PART[MedLCSmodule2]:AFTER[SMA] {
 	@name = MedLCSmodule2cc
 	@title = Cruiser LCS Module 2
 	@description = Cruiser LCS Module 2
@@ -106,7 +106,7 @@
 		%maxHitPoints = 70000
 	}
 }
-+PART[mediumhullshortvls]:AFTER[SM_Industries] {
++PART[mediumhullshortvls]:AFTER[SMA] {
 	@name = mediumhullshortvlscc
 	@title = Cruiser VLS Hull Module
 	@description = Cruiser VLS Module
@@ -119,7 +119,7 @@
 
 //BB
 
-+PART[mediumbow]:AFTER[SM_Industries] {
++PART[mediumbow]:AFTER[SMA] {
 	@name = mediumbbbow
 	@title = Battleship Bow
 	@description = Battleship Bow
@@ -130,7 +130,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[mediumhelostern]:AFTER[SM_Industries] {
++PART[mediumhelostern]:AFTER[SMA] {
 	@name = mediumbbhelostern
 	@title = Battleship Helicopter Stern
 	@description = Battleship Stern
@@ -141,7 +141,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[mediumhull]:AFTER[SM_Industries] {	
++PART[mediumhull]:AFTER[SMA] {	
 	@name = mediumbbhull
 	@title = Battleship Hull
 	@description = Battleship Hull
@@ -152,7 +152,7 @@
 		%maxHitPoints = 99000
 	}
 }
-+PART[mediumhullshort]:AFTER[SM_Industries] {
++PART[mediumhullshort]:AFTER[SMA] {
 	@name = mediumbbhullshort
 	@title = Battleship Short Hull
 	@description = Battleship Short Hull
@@ -163,7 +163,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[mediumstern]:AFTER[SM_Industries] {
++PART[mediumstern]:AFTER[SMA] {
 	@name = mediumbbstern
 	@title = Battleship Stern
 	@description = Battleship Stern
@@ -174,7 +174,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[MedBowRevB]:AFTER[SM_Industries] {
++PART[MedBowRevB]:AFTER[SMA] {
 	@name = MedBowRevBbb
 	@title = Battleship Bow v2
 	@description = Battleship Bow v2
@@ -185,7 +185,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[MedHullLCSModule2]:AFTER[SM_Industries] {
++PART[MedHullLCSModule2]:AFTER[SMA] {
 	@name = MedHullLCSModule2bb
 	@title = Battleship Hull LCS Module 2
 	@description = Battleship Hull LCS Module 2
@@ -196,7 +196,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[mediumsternHangarShort]:AFTER[SM_Industries] {
++PART[mediumsternHangarShort]:AFTER[SMA] {
 	@name = mediumsternHangarShortbb
 	@title = Battleship Stern Hangar
 	@description = Battleship Stern Hangar
@@ -207,7 +207,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[mediumsternHangarLong]:AFTER[SM_Industries] {
++PART[mediumsternHangarLong]:AFTER[SMA] {
 	@name = mediumsternHangarLongbb
 	@title = Battleship Stern Hangar Long
 	@description = Battleship Stern Hangar
@@ -218,7 +218,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[MedLCSmodule1]:AFTER[SM_Industries] {
++PART[MedLCSmodule1]:AFTER[SMA] {
 	@name = MedLCSmodule1bb
 	@title = Battleship LCS Module
 	@description = Battleship LCS Module
@@ -229,7 +229,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[MedLCSmodule1B]:AFTER[SM_Industries] {
++PART[MedLCSmodule1B]:AFTER[SMA] {
 	@name = MedLCSmodule1Bbb
 	@title = Battleship LCS Module B
 	@description = Battleship LCS Module B
@@ -240,7 +240,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[MedLCSmodule2]:AFTER[SM_Industries] {
++PART[MedLCSmodule2]:AFTER[SMA] {
 	@name = MedLCSmodule2bb
 	@title = Battleship LCS Module 2
 	@description = Battleship LCS Module 2
@@ -251,7 +251,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[mediumhullshortvls]:AFTER[SM_Industries] {
++PART[mediumhullshortvls]:AFTER[SMA] {
 	@name = mediumhullshortvlsbb
 	@title = Battleship VLS Hull Module
 	@description = Cruiser VLS Module
@@ -264,7 +264,7 @@
 }
 //BC
 
-+PART[mediumbow]:AFTER[SM_Industries] {
++PART[mediumbow]:AFTER[SMA] {
 	@name = mediumbcbow
 	@title = Battlecruiser Bow
 	@description = Battlecruiser Bow
@@ -275,7 +275,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[mediumhelostern]:AFTER[SM_Industries] {
++PART[mediumhelostern]:AFTER[SMA] {
 	@name = mediumbchelostern
 	@title = Battlecruiser Helicopter Stern
 	@description = Battlecruiser Stern
@@ -286,7 +286,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[mediumhull]:AFTER[SM_Industries] {	
++PART[mediumhull]:AFTER[SMA] {	
 	@name = mediumbchull
 	@title = Battlecruiser Hull
 	@description = Battlecruiser Hull
@@ -297,7 +297,7 @@
 		%maxHitPoints = 88000
 	}
 }
-+PART[mediumhullshort]:AFTER[SM_Industries] {
++PART[mediumhullshort]:AFTER[SMA] {
 	@name = mediumbchullshort
 	@title = Battlecruiser Short Hull
 	@description = Battlecruiser Short Hull
@@ -308,7 +308,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[mediumstern]:AFTER[SM_Industries] {
++PART[mediumstern]:AFTER[SMA] {
 	@name = mediumbcstern
 	@title = Battlecruiser Stern
 	@description = Battlecruiser Stern
@@ -319,7 +319,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[MedBowRevB]:AFTER[SM_Industries] {
++PART[MedBowRevB]:AFTER[SMA] {
 	@name = MedBowRevbcb
 	@title = Battlecruiser Bow v2
 	@description = Battlecruiser Bow v2
@@ -330,7 +330,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[MedHullLCSModule2]:AFTER[SM_Industries] {
++PART[MedHullLCSModule2]:AFTER[SMA] {
 	@name = MedHullLCSModule2bc
 	@title = Battlecruiser Hull LCS Module 2
 	@description = Battlecruiser Hull LCS Module 2
@@ -341,7 +341,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[mediumsternHangarShort]:AFTER[SM_Industries] {
++PART[mediumsternHangarShort]:AFTER[SMA] {
 	@name = mediumsternHangarShortbc
 	@title = Battlecruiser Stern Hangar
 	@description = Battlecruiser Stern Hangar
@@ -352,7 +352,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[mediumsternHangarLong]:AFTER[SM_Industries] {
++PART[mediumsternHangarLong]:AFTER[SMA] {
 	@name = mediumsternHangarLongbc
 	@title = Battlecruiser Stern Hangar Long
 	@description = Battlecruiser Stern Hangar
@@ -363,7 +363,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[MedLCSmodule1]:AFTER[SM_Industries] {
++PART[MedLCSmodule1]:AFTER[SMA] {
 	@name = MedLCSmodule1bc
 	@title = Battlecruiser LCS Module
 	@description = Battlecruiser LCS Module
@@ -374,7 +374,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[MedLCSmodule1B]:AFTER[SM_Industries] {
++PART[MedLCSmodule1B]:AFTER[SMA] {
 	@name = MedLCSmodule1bcb
 	@title = Battlecruiser LCS Module B
 	@description = Battlecruiser LCS Module B
@@ -385,7 +385,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[MedLCSmodule2]:AFTER[SM_Industries] {
++PART[MedLCSmodule2]:AFTER[SMA] {
 	@name = MedLCSmodule2bc
 	@title = Battlecruiser LCS Module 2
 	@description = Battlecruiser LCS Module 2
@@ -396,7 +396,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[mediumhullshortvls]:AFTER[SM_Industries] {
++PART[mediumhullshortvls]:AFTER[SMA] {
 	@name = mediumhullshortvlsbc
 	@title = Battlecruiser VLS Hull Module
 	@description = Cruiser VLS Module
@@ -408,47 +408,47 @@
 	}
 }
 
-@PART[smallsupmid]:NEEDS[TweakScale]:AFTER[SM_Industries] {
+@PART[smallsupmid]:NEEDS[TweakScale]:AFTER[SMA] {
 	%MODULE[TweakScale] {
         type = free_square
     }
 }
-@PART[VetteSuperOpen]:NEEDS[TweakScale]:AFTER[SM_Industries] {
+@PART[VetteSuperOpen]:NEEDS[TweakScale]:AFTER[SMA] {
 	%MODULE[TweakScale] {
         type = free_square
     }
 }
-@PART[vetteHangar]:NEEDS[TweakScale]:AFTER[SM_Industries] {
+@PART[vetteHangar]:NEEDS[TweakScale]:AFTER[SMA] {
 	%MODULE[TweakScale] {
         type = free_square
     }
 }
-@PART[VetteHullVLSshort]:NEEDS[TweakScale]:AFTER[SM_Industries] {
+@PART[VetteHullVLSshort]:NEEDS[TweakScale]:AFTER[SMA] {
 	%MODULE[TweakScale] {
         type = free_square
     }
 }
-@PART[smallsupfront]:NEEDS[TweakScale]:AFTER[SM_Industries] {
+@PART[smallsupfront]:NEEDS[TweakScale]:AFTER[SMA] {
 	%MODULE[TweakScale] {
         type = free_square
     }
 }
-@PART[smallsupcut]:NEEDS[TweakScale]:AFTER[SM_Industries] {
+@PART[smallsupcut]:NEEDS[TweakScale]:AFTER[SMA] {
 	%MODULE[TweakScale] {
         type = free_square
     }
 }
-@PART[DGHangar]:NEEDS[TweakScale]:AFTER[SM_Industries] {
+@PART[DGHangar]:NEEDS[TweakScale]:AFTER[SMA] {
 	%MODULE[TweakScale] {
         type = free_square
     }
 }
-@PART[DGBridgeBase]:NEEDS[TweakScale]:AFTER[SM_Industries] {
+@PART[DGBridgeBase]:NEEDS[TweakScale]:AFTER[SMA] {
 	%MODULE[TweakScale] {
         type = free_square
     }
 }
-@PART[DGdeckHangar]:NEEDS[TweakScale]:AFTER[SM_Industries] {
+@PART[DGdeckHangar]:NEEDS[TweakScale]:AFTER[SMA] {
 	%MODULE[TweakScale] {
         type = free_square
     }
