--- a/EW/AircraftGuns.cfg
+++ b/EW/AircraftGuns.cfg
@@ -17,6 +17,11 @@
 		@bulletVelocity = 1030
 		@bulletType = 20x102mmBullet
 		@ammoName = 20mm
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 +PART[bahaHiddenVulcan]:NEEDS[!AviatorArsenal]:FINAL {
@@ -31,6 +36,11 @@
 		@bulletVelocity = 1030
 		@bulletType = 20x102mmBullet
 		@ammoName = 20mm
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 //AN/M3
@@ -46,6 +56,11 @@
 		@bulletVelocity = 1030
 		@bulletType = 12.7mmBullet
 		@ammoName = .50cal
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 +PART[bahaHiddenVulcan]:NEEDS[!AviatorArsenal]:FINAL {
@@ -60,6 +75,11 @@
 		@bulletVelocity = 1030
 		@bulletType = 12.7mmBullet
 		@ammoName = .50cal
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 //ADEN Mk.4
@@ -75,6 +95,11 @@
 		@bulletVelocity = 790
 		@bulletType = 30mmBullet
 		@ammoName = 30mm
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 +PART[bahaHiddenVulcan]:NEEDS[!AviatorArsenal]:FINAL {
@@ -89,6 +114,11 @@
 		@bulletVelocity = 790
 		@bulletType = 30mmBullet
 		@ammoName = 30mm
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 //DEFA 550
@@ -104,6 +134,11 @@
 		@bulletVelocity = 790
 		@bulletType = 30mmBullet
 		@ammoName = 30mm
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 +PART[bahaHiddenVulcan]:NEEDS[!AviatorArsenal]:FINAL {
@@ -118,6 +153,11 @@
 		@bulletVelocity = 790
 		@bulletType = 30mmBullet
 		@ammoName = 30mm
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 //N-37
@@ -133,6 +173,11 @@
 		@bulletVelocity = 690
 		@bulletType = 37MMAP
 		@ammoName = 40mm
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 +PART[bahaHiddenVulcan]:NEEDS[!AviatorArsenal]:FINAL {
@@ -147,6 +192,11 @@
 		@bulletVelocity = 690
 		@bulletType = 37MMAP
 		@ammoName = 40mm
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 //NS-23
@@ -162,6 +212,11 @@
 		@bulletVelocity = 690
 		@bulletType = 23x115mmBullet
 		@ammoName = 20mm
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 +PART[bahaHiddenVulcan]:NEEDS[!AviatorArsenal]:FINAL {
@@ -176,6 +231,11 @@
 		@bulletVelocity = 690
 		@bulletType = 23x115mmBullet
 		@ammoName = 20mm
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 //NR-30
@@ -191,6 +251,11 @@
 		@bulletVelocity = 780
 		@bulletType = 30mmBullet
 		@ammoName = 30mm
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 +PART[bahaHiddenVulcan]:NEEDS[!AviatorArsenal]:FINAL {
@@ -205,6 +270,11 @@
 		@bulletVelocity = 780
 		@bulletType = 30mmBullet
 		@ammoName = 30mm
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 //M61A1
@@ -220,6 +290,11 @@
 		@bulletVelocity = 1080
 		@bulletType = 20mmBullet
 		@ammoName = 20mm
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 //GSh-23L
@@ -235,5 +310,10 @@
 		@bulletVelocity = 715
 		@bulletType = 23x115mmBullet
 		@ammoName = 23mm
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
