--- a/EW/Balancing/MM_Bullets.cfg
+++ b/EW/Balancing/MM_Bullets.cfg
@@ -34,17 +34,10 @@
 	@apBulletMod = 1.5
     @tntMass = 0.03
 }
-@BULLET[30x165HE]:NEEDS[SMA] {
+@BULLET[30x165HE]:AFTER[BDA]:NEEDS[SMA] {
 	@bulletMass = 0.4
 	@apBulletMod = 0.42
     @tntMass = 0.031
-}
-+BULLET[30x165HE]:NEEDS[SMA]:FINAL {
-	@name = 30mm3UOF8
-	@bulletVelocity = 950
-	@bulletMass = 0.389
-	@apBulletMod = 0.42
-    @tntMass = 0.049
 }
 @BULLET[30x165K]:NEEDS[SMA] {
 	@bulletVelocity = 900
