--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -330,54 +330,19 @@
 		maxAmount = 1904
 	}
 	
-	-MODULE[ModuleWeapon] {}
-	MODULE {
-		name = ModuleWeapon
-	
-		fireTransformName = fireTransform
-		turretID = 0
+	@MODULE[ModuleWeapon] {
+		%bulletType = 30mm3UOF8
+		-bulletMass = a
+		-bulletVelocity = a
+		-startColor = a
+		-nonTracerWidth = a
+		-projectileColor = a
 
-		hasDeployAnim = false
-
-		hasFireAnimation = false
-		fireAnimName = fireAnimation_Leopard1A1
-		spinDownAnimation = false
-
-		roundsPerMinute = 2250
-		maxDeviation = 0.6
-		maxTargetingRange = 2300
-		maxEffectiveDistance = 5000
-
-		ammoName = CannonShells
-		bulletType = 30x165Ammo
-		requestResourceAmount = 1
-
-		hasRecoil = true
-		onlyFireInRange = true
-		bulletDrop = true
-
-		weaponType = ballistic
-
-		projectileColor = 255, 90, 0, 190
-
-		tracerStartWidth = 0.15
-		tracerEndWidth = 0.05
-		tracerLength = 0
-
-		maxHeat = 3600
-		heatPerShot = 18
-		heatLoss = 1200
-
-		fireSoundPath = BDArmory/Parts/m230ChainGun/Sounds/m230shot
-		overheatSoundPath = BDArmory/Parts/50CalTurret/sounds/turretOverheat
-		oneShotSound = true
-		showReloadMeter = false
-		reloadAudioPath = BDArmory/Parts/m1Abrams/sounds/reload
-		
-		engageAir = true
-		engageMissile = false
-		engageGround = false
-		engageSLW = false
+		@heatPerShot = 44
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
 	}
 }
 @PART[SMA57E6BGM]:NEEDS[SMA] {
