--- a/EW/Bullets.cfg
+++ b/EW/Bullets.cfg
@@ -1,4 +1,20 @@
 BULLET {
+	name = 30mm3UOF8
+	caliber = 30
+	bulletVelocity = 950
+	bulletMass = 0.389
+	explosive = True
+    tntMass = 0.049
+	fuzeType = None 
+	projectileColor = 255, 0, 0, 128
+	fadeColor = True
+	startColor = 255, 255, 0, 120
+	subProjectileCount = 1
+	apBulletMod = 0.42
+	bulletDragTypeName = AnalyticEstimate	
+}
+
+BULLET {
     name = 76.2MMNAPCR
 	caliber = 76
 	bulletVelocity = 950
