--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -44,9 +44,23 @@
             key = 5 20 4.423522 2.503766
         } 
     }
+	@MODULE[ModuleWeapon] {
+		@weaponType = ballistic
+		@bulletType = 23x152mmHEBullet
+		@roundsPerMinute = 4000
+
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
 	MODULE {
 		name = ModuleCASE
 		CASELevel = 0
+	}
+	@RESOURCE[23x152Ammo] {
+		amount = 2000
+		maxAmount = 2000
 	}
 }
 
@@ -286,7 +300,7 @@
     @title = ERA Panel
 }
 @PART[ReactivePanelPrototypeS]:NEEDS[SMA] {
-    @title = ERA Panel
+	@title = ERA Panel
 }
 @PART[S125Launcher]:NEEDS[SMA] {
 	@title = 5V24 System-125 TEL
@@ -307,13 +321,45 @@
 		name = ModuleCASE
 		CASELevel = 0
 	}
+	
+	@MODULE[ModuleWeapon] {
+		@weaponType = ballistic
+		@bulletType = 3BM22HEATFS; 3BM22APFSDS
+
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+	
+	@RESOURCE[120mmAmmo] {
+		amount = 36
+		maxAmount = 36
+	}
 }
 @PART[T90MS]:NEEDS[SMA] {
 	@title = T-90AM
 	@description = T-90AM is a Russian Federation main battle tank equipped with 125mm 2A46M-5 smoothbore gun.
+	-MODULE[ModuleReactionWheel] {}
+	
+	@MODULE[ModuleWeapon] {
+		@weaponType = ballistic
+		@bulletType = 3BM22HEATFS; 125MM-APFSDS
+
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+	
 	MODULE {
 		name = ModuleCASE
 		CASELevel = 0
+	}
+	
+	@RESOURCE[120mmAmmo] {
+		amount = 42
+		maxAmount = 42
 	}
 }
 @PART[SMTunguskaAAMT]:NEEDS[SMA]:AFTER[SMA] {
