--- a/Missiles/agm_AGM12C.cfg
+++ b/Missiles/agm_AGM12C.cfg
@@ -106,7 +106,7 @@
 		// --- Engagement Rules --- 
 		minStaticLaunchRange = 200
 		maxStaticLaunchRange = 19000
-		engageAir = true
+		engageAir = false
 		engageMissile = false
 		engageGround = true
 		engageSLW = false
