--- a/Missiles/agm_RB04C.cfg
+++ b/Missiles/agm_RB04C.cfg
@@ -101,9 +101,9 @@
 		// --- Engagement Rules --- 
 		minStaticLaunchRange = 200
 		maxStaticLaunchRange = 32000
-		engageAir = true
+		engageAir = false
 		engageMissile = false
-		engageGround = false
+		engageGround = true
 		engageSLW = false
 	}
 	
