--- a/Turrets/tank_T-54.cfg
+++ b/Turrets/tank_T-54.cfg
@@ -107,6 +107,11 @@ PART {
 		showReloadMeter = true
 		reloadCompletePath = KKA/Sounds/ReadytofireRussian
 		reloadAudioPath = BDArmory/Parts/m1Abrams/sounds/reload
+		
+		engageAir = false
+		engageMissile = false
+		engageGround = true
+		engageSLW = false
 	}
 
 	RESOURCE {
