--- a/Turrets/tank_Leopard1A1.cfg
+++ b/Turrets/tank_Leopard1A1.cfg
@@ -108,6 +108,11 @@ PART {
 		showReloadMeter = true
 		reloadCompletePath = KKA/Sounds/ReadytofireBritish
 		reloadAudioPath = BDArmory/Parts/m1Abrams/sounds/reload
+		
+		engageAir = false
+		engageMissile = false
+		engageGround = true
+		engageSLW = false
 	}
 	RESOURCE {
 		name = CannonShells
