--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -48,6 +48,7 @@
 		@weaponType = ballistic
 		@bulletType = 23x152mmHEBullet
 		@roundsPerMinute = 4000
+		@heatPerShot = 10
 
 		%engageAir = true
 		%engageMissile = false
@@ -59,8 +60,8 @@
 		CASELevel = 0
 	}
 	@RESOURCE[23x152Ammo] {
-		amount = 2000
-		maxAmount = 2000
+		@amount = 2000
+		@maxAmount = 2000
 	}
 }
 
@@ -280,6 +281,17 @@
 @PART[SkudD]:NEEDS[SMA] {
     @title = 8A61 Zemlya
     @description = The OKB-1 8A61/R-11 "Zemlya" (SS-1B) "Scud" was a Soviet tactical ballistic missile. It was the first of several similar Soviet missiles to be given the reporting name Scud.
+	
+	MODULE {
+		name = BDExplosivePart
+		tntMass = 535
+	}
+	
+	@MODULE[MissileLauncher] {
+		-useSimpleDrag = true
+		-simpleCoD = 0,0,-8
+	}
+	
 }
 @PART[MK141GMLS]:NEEDS[SMA] {
     @title = Mk. 141 GMLS
@@ -333,8 +345,8 @@
 	}
 	
 	@RESOURCE[120mmAmmo] {
-		amount = 36
-		maxAmount = 36
+		@amount = 36
+		@maxAmount = 36
 	}
 }
 @PART[T90MS]:NEEDS[SMA] {
@@ -358,8 +370,8 @@
 	}
 	
 	@RESOURCE[120mmAmmo] {
-		amount = 42
-		maxAmount = 42
+		@amount = 42
+		@maxAmount = 42
 	}
 }
 @PART[SMTunguskaAAMT]:NEEDS[SMA]:AFTER[SMA] {
@@ -647,7 +659,7 @@
 		minStaticLaunchRange = 1000
 		maxStaticLaunchRange = 15000
 		engageAir = true
-		engageMissile = true
+		engageMissile = false
 		engageGround = false
 		engageSLW = false
 	}
