SMA Optimization Stage 2

--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -21,6 +21,18 @@
 		name = ModuleCASE
 		CASELevel = 0
 	}
+	
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+	
+	@RESOURCE[20x102Ammo] {
+		@amount = 2100
+		@maxAmount = 2100
+	}
 }
 @PART[ShilkaZSU234turret]:NEEDS[SMA] {
 	@title = 2A6 ZSU-23-4 Shilka
@@ -44,10 +56,16 @@
             key = 5 20 4.423522 2.503766
         } 
     }
+	-RESOURCE[CMSmoke] {}
+	-MODULE[CMDropper] {}
+	-MODULE[ModuleDataTransmitter] {}
+	-MODULE[ModuleKerbNetAccess] {}
+	-MODULE[MissileFire] {}
+	
 	@MODULE[ModuleWeapon] {
 		@weaponType = ballistic
 		@bulletType = 23x152mmHEBullet
-		@roundsPerMinute = 4000
+		@roundsPerMinute = 1000
 		@heatPerShot = 10
 
 		%engageAir = true
@@ -74,6 +92,8 @@
 @PART[AAV7A1]:NEEDS[SMA] {
 	@title = AAVP-7A1
 	@description = The Assault Amphibious Vehicle is a fully tracked amphibious landing vehicle manufactured by U.S. Combat Systems.
+	-MODULE[ModuleDataTransmitter] {}
+	-MODULE[ModuleKerbNetAccess] {}
 }
 @PART[AAV7turret20]:NEEDS[SMA] {
 	@title = AAVP-7A1
@@ -81,6 +101,20 @@
 	MODULE {
 		name = ModuleCASE
 		CASELevel = 0
+	}
+	-RESOURCE[CMSmoke] {}
+	-MODULE[CMDropper] {}
+	@MODULE[ModuleWeapon] {		
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+		
+		-bulletDmgMult = x
+	}
+	@RESOURCE[20x102Ammo] {
+		@amount = 900
+		@maxAmount = 900
 	}
 }
 @PART[AAVrightArmor]:NEEDS[SMA] {
@@ -99,6 +133,16 @@
 		name = ModuleCASE
 		CASELevel = 0
 	}
+	@MODULE[ModuleWeapon] {		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+	@RESOURCE[100mmShells] {
+		@amount = 340
+		@maxAmount = 340
+	}
 }
 @PART[AK130turret]:NEEDS[SMA] {
 	@title = AK-130
@@ -106,6 +150,18 @@
 	MODULE {
 		name = ModuleCASE
 		CASELevel = 0
+	}
+	@MODULE[ModuleWeapon] {
+		@roundsPerMinute = 90
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+	@RESOURCE[130Shells] {
+		@amount = 340
+		@maxAmount = 340
 	}
 }
 @PART[AK230]:NEEDS[SMA] {
@@ -115,6 +171,18 @@
 		name = ModuleCASE
 		CASELevel = 0
 	}
+	@MODULE[ModuleWeapon] {
+		@roundsPerMinute = 1000
+		
+		%engageAir = true
+		%engageMissile = true
+		%engageGround = false
+		%engageSLW = false
+	}
+	@RESOURCE[30x173Ammo] {
+		@amount = 2000
+		@maxAmount = 2000
+	}
 }
 @PART[AK639QB1]:NEEDS[SMA] {
 	@title = AK-630
@@ -123,6 +191,19 @@
 		name = ModuleCASE
 		CASELevel = 0
 	}
+	@MODULE[ModuleWeapon] {
+		@weaponType = ballistic
+		
+		%engageAir = true
+		%engageMissile = true
+		%engageGround = false
+		%engageSLW = false
+	}
+	@RESOURCE[30x173Ammo] {
+		@amount = 2000
+		@maxAmount = 2000
+	}
+
 }
 @PART[AK230LowPlinth]:NEEDS[SMA] {
 	@title = AK-230/630 Low Plinth
@@ -137,6 +218,19 @@
 		name = ModuleCASE
 		CASELevel = 0
 	}
+	@MODULE[ModuleWeapon] {
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+	-RESOURCE[CMSmoke] {}
+	-MODULE[CMDropper] {}
+	
+	@RESOURCE[30x165Ammo] {
+		@amount = 500
+		@maxAmount = 500
+	}
 }
 @PART[BMP75mmTurret]:NEEDS[SMA] {
 	@title = BMP-1
@@ -145,10 +239,18 @@
 	@MODULE[ModuleWeapon] {
 		%shortName = 2A28 "Grom" 73mm
 		@bulletType = 76.2MMMHEATFS
+		
 	}
 	MODULE {
 		name = ModuleCASE
 		CASELevel = 0
+	}
+	-RESOURCE[CMSmoke] {}
+	-MODULE[CMDropper] {}
+	
+	@RESOURCE[76x636Ammo] {
+		@amount = 40
+		@maxAmount = 40
 	}
 }
 @PART[BradleyActive]:NEEDS[SMA] {
@@ -158,9 +260,31 @@
 		name = ModuleCASE
 		CASELevel = 0
 	}
+	@MODULE[ModuleWeapon] {
+		@weaponType = ballistic
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+	-RESOURCE[CMSmoke] {}
+	-MODULE[CMDropper] {}
+	-MODULE[RadarWarningReceiver] {}
+	
+	@RESOURCE[25x137Ammo] {
+		@amount = 900
+		@maxAmount = 900
+	}
 }
 @PART[BradleyHull]:NEEDS[SMA] {
 	@title = M2 Bradley
+	-RESOURCE[CMSmoke] {}
+	-MODULE[CMDropper] {}
+	-MODULE[ModuleDataTransmitter] {}
+	-MODULE[ModuleKerbNetAccess] {}
+	-MODULE[MissileFire] {}
+	-MODULE[RadarWarningReceiver] {}
 }
 @PART[BradleyRightArmorUpper]:NEEDS[SMA] {
 	@title = M2 Bradley Armor Right
@@ -176,6 +300,10 @@
 }
 @PART[Eland90BHull]:NEEDS[SMA] {
 	@title = Eland 90B
+	-MODULE[ModuleDataTransmitter] {}
+	-MODULE[ModuleKerbNetAccess] {}
+	-MODULE[MissileFire] {}
+	-MODULE[RadarWarningReceiver] {}
 }
 @PART[Eland90BTurret]:NEEDS[SMA] {
 	@title = Eland 90B
@@ -183,10 +311,29 @@
 		name = ModuleCASE
 		CASELevel = 0
 	}
+	@MODULE[ModuleWeapon] {
+		@weaponType = ballistic
+		
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+	-RESOURCE[CMSmoke] {}
+	-MODULE[CMDropper] {}
+	
+	@RESOURCE[90mmShells] {
+		@amount = 20
+		@maxAmount = 20
+	}
 }
 @PART[FV510Hull]:NEEDS[SMA] {
 	@title = FV 510 Warrior
 	@description = The Warrior tracked vehicle family is a series of British armoured vehicles, originally developed to replace the older FV430 series of armoured vehicles. Warrior was accepted for service with the British Army in November 1984.
+	-MODULE[ModuleDataTransmitter] {}
+	-MODULE[ModuleKerbNetAccess] {}
+	-MODULE[MissileFire] {}
+	-MODULE[RadarWarningReceiver] {}
 }
 @PART[FV510Turret]:NEEDS[SMA] {
 	@title = FV 510 Warrior
@@ -195,10 +342,28 @@
 		name = ModuleCASE
 		CASELevel = 0
 	}
+	@RESOURCE[30x173Ammo] {
+		@amount = 228
+		@maxAmount = 228
+	}
+	@MODULE[ModuleWeapon] {
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+	
+	-RESOURCE[CMSmoke] {}
+	-MODULE[CMDropper] {}
+	-MODULE[RadarWarningReceiver] {}
+	
 }
 @PART[Humvee]:NEEDS[SMA] {
 	@title = HMMWV
 	-MODULE[ModuleRadar] {}
+	-MODULE[ModuleDataTransmitter] {}
+	-MODULE[ModuleKerbNetAccess] {}
+	-MODULE[MissileFire] {}
 }
 @PART[mk19Turret]:NEEDS[SMA] {
 	@title = Mk. 19 Grenade launcher
@@ -206,6 +371,14 @@
 	MODULE {
 		name = ModuleCASE
 		CASELevel = 0
+	}
+	@MODULE[ModuleWeapon] {
+		@weaponType = ballistic
+		
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
 	}
 }
 @PART[HVUA30CG]:NEEDS[SMA] {
@@ -215,10 +388,33 @@
 		name = ModuleCASE
 		CASELevel = 0
 	}
+	@MODULE[ModuleWeapon] {
+		@weaponType = ballistic
+		%bulletType = 12.7x99mmBullet
+		-bulletMass = a
+		-bulletVelocity = a
+		@ammoName = 50CalAmmo
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+	
+	@RESOURCE[30x173Ammo] {
+		@name = 50CalAmmo
+		@amount = 500
+		@maxAmount = 500
+	}
 }
 @PART[KUB2K12]:NEEDS[SMA] {
 	@title = 2K12 Kub Hull
 	@description = MMZ 2K12 "Kub" (SA-6) "Gainful" mobile surface-to-air missile system is a Soviet low to medium-level air defence system designed to protect ground forces from air attack. Each 2K12 battery consisted of a number of similar tracked vehicles, one of which carries 25 kW G/H band radar. The battery usually also includes four triple-missile transporter erector launchers (TELs), and four trucks, each carrying three spare missiles and a crane.
+	-RESOURCE[CMSmoke] {}
+	-MODULE[CMDropper] {}
+	-MODULE[ModuleDataTransmitter] {}
+	-MODULE[ModuleKerbNetAccess] {}
+	-MODULE[MissileFire] {}
 }
 @PART[KUB2K12launcher]:NEEDS[SMA] {
 	@title = 2K12 Kub
@@ -231,6 +427,21 @@
 		name = ModuleCASE
 		CASELevel = 2
 	}
+	@MODULE[ModuleWeapon] {
+		@weaponType = ballistic
+		
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+	-RESOURCE[CMSmoke] {}
+	-MODULE[CMDropper] {}
+	
+	@RESOURCE[120mmAmmo] {
+		@amount = 42
+		@maxAmount = 42
+	}
 }
 @PART[M1SMA]:NEEDS[SMA] {
 	@title = M1A1 Abrams
@@ -238,6 +449,20 @@
 	MODULE {
 		name = ModuleCASE
 		CASELevel = 2
+	}
+	@MODULE[ModuleWeapon] {
+		@weaponType = ballistic
+		
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+	-RESOURCE[CMSmoke] {}
+	-MODULE[CMDropper] {}
+	@RESOURCE[120mmAmmo] {
+		@amount = 40
+		@maxAmount = 40
 	}
 }
 @PART[M1SM1Turret]:NEEDS[SMA] {
@@ -247,10 +472,29 @@
 		name = ModuleCASE
 		CASELevel = 1
 	}
+	@MODULE[ModuleWeapon] {
+		@weaponType = ballistic
+		
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+	-RESOURCE[CMSmoke] {}
+	-MODULE[CMDropper] {}
+	@RESOURCE[120mmAmmo] {
+		@amount = 55
+		@maxAmount = 55
+	}
 }
 @PART[M113Hull]:NEEDS[SMA] {
 	@title = M113 APC
 	@description = The M113 is a fully tracked armored personnel carrier that was developed and produced by the Food Machinery and Chemical Corporation. It was largely known as an "APC" or an "ACAV" (armored cavalry assault vehicle) by the allied forces.
+	-RESOURCE[CMSmoke] {}
+	-MODULE[CMDropper] {}
+	-MODULE[ModuleDataTransmitter] {}
+	-MODULE[ModuleKerbNetAccess] {}
+	-MODULE[MissileFire] {}
 }
 @PART[M113GunTurret]:NEEDS[SMA] {
 	@title = M240E1 GPMG
@@ -259,9 +503,33 @@
 		name = ModuleCASE
 		CASELevel = 0
 	}
+	
+	@MODULE[ModuleWeapon] {
+		-bulletMass = 4.25e-4
+		-bulletVelocity = 883
+		@ammoName = 7.7x56Ammo
+		@bulletType = 7.7x56RmmBullet
+	
+		%engageAir = false
+		%engageMissile = false
+		%engageGround = true
+		%engageSLW = false
+	}
+	
+	RESOURCE[30x173Ammo] {
+		@name = 7.7x56Ammo
+	}
+	
+	-RESOURCE[CMSmoke] {}
+	-MODULE[CMDropper] {}
 }
 @PART[AFVFlareCM]:NEEDS[SMA] {
     @title = Flare dispenser.
+	@RESOURCE[CMFlare] {
+		@amount = 12
+		@maxAmount = 12
+		@name = CMSmoke
+	}
 }
 +PART[AFVFlareCM]:NEEDS[SMA] {
 	@name = AFVSmokeCM
@@ -290,6 +558,9 @@
 	@MODULE[MissileLauncher] {
 		-useSimpleDrag = true
 		-simpleCoD = 0,0,-8
+		-blastRadius = 50
+		-blastPower = 35
+		-blastHeat = 42
 	}
 	
 }
@@ -325,6 +596,8 @@
 		name = ModuleCASE
 		CASELevel = 0
 	}
+	-RESOURCE[CMSmoke] {}
+	-MODULE[CMDropper] {}
 }
 @PART[SMsT80Turret]:NEEDS[SMA] {
 	@title = T-80B
@@ -353,6 +626,8 @@
 	@title = T-90AM
 	@description = T-90AM is a Russian Federation main battle tank equipped with 125mm 2A46M-5 smoothbore gun.
 	-MODULE[ModuleReactionWheel] {}
+	-RESOURCE[CMSmoke] {}
+	-MODULE[CMDropper] {}
 	
 	@MODULE[ModuleWeapon] {
 		@weaponType = ballistic
