SMA Optimalisation Complete.

--- a/Turrets/tank_PT-76.cfg
+++ b/Turrets/tank_PT-76.cfg
@@ -24,7 +24,7 @@ PART {
 	bulkheadProfiles = srf
 	title = PT-76
 	manufacturer = Kerbal Kombat Anthology
-	description = The PT-76 is a Soviet amphibious light tank equipped with 2А16 76 mm D-56TS tank gun introduced in the early 1950s and soon became the standard reconnaissance tank of the Soviet Army and the other Warsaw Pact armed forces. The PT-76 is used in the reconnaissance and fire-support roles. 
+	description = The PT-76 or Object 740B is a Soviet amphibious light tank equipped with 2А16 76 mm D-56TS tank gun introduced in the early 1950s and soon became the standard reconnaissance tank of the Soviet Army and the other Warsaw Pact armed forces. The PT-76 is used in the reconnaissance and fire-support roles. 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 0,1,0,0,1
 
