--- a/EW/Balancing/MM_Bullets.cfg
+++ b/EW/Balancing/MM_Bullets.cfg
@@ -12,6 +12,24 @@
 @BULLET[20x102mmHEBullet]:NEEDS[SMA] {
 	@tntMass = 0.01
 }
+@BULLET[20x110mmBullet]:NEEDS[SMA] {
+	@apBulletMod = 0.8
+}
+@BULLET[20x82mmBullet]:NEEDS[SMA] {
+	@apBulletMod = 1
+}
+@BULLET[20x99mmBullet]:NEEDS[SMA] {
+	@apBulletMod = 1
+}
+@BULLET[50BMG]:NEEDS[SMA] {
+	@apBulletMod = 1
+}
+@BULLET[7.62X51mmBullet  ]:NEEDS[SMA] {
+	@apBulletMod = 0.5
+}
+@BULLET[7.7mmVickers]:NEEDS[SMA] {
+	@apBulletMod = 0.5
+}
 @BULLET[23x115mmBullet]:NEEDS[SMA] {
 	@tntMass = 0.011
 }
