--- a/EW/Balancing/MM_AA.cfg
+++ b/EW/Balancing/MM_AA.cfg
@@ -37,15 +37,15 @@
 @PART[JerichoTrumpet]:NEEDS[SMA] {
 	-MODULE[BDACategoryModule] {}
 }
-@ROCKET[2.75inch]:NEEDS[SMA] {
-	EMP = False
-	choker = False
-	gravitic = False
-	impulse = False
+@ROCKET[2.75inch]:NEEDS[SMA]:FIRST {
+	%EMP = False
+	%choker = False
+	%gravitic = False
+	%impulse = False
 }
-@ROCKET[R4M]:NEEDS[SMA] {
-	EMP = False
-	choker = False
-	gravitic = False
-	impulse = False
+@ROCKET[R4M]:NEEDS[SMA]:FIRST {
+	%EMP = False
+	%choker = False
+	%gravitic = False
+	%impulse = False
 }
